Create form for new Author Divide controllers of home page and author in frontend. Author is saved and added to database.